src/main/java/com/example/Structural/Bridge/good/Client.java
package com.example.Structural.Bridge.good;

public class Client {
    public static void main(String[] args) {
//        AbstractShape squareShape = new SquareShape();
//        squareShape.getShape();
//        squareShape = new Triangle();
//        squareShape.getShape();
    }
}
